--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "socket.io": "^4.7.4"
   }
 }
