--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node api/server.js",
-    "server": "nodemon api/server.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -24,6 +24,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express-async-handler": "^1.2.0",
     "socket.io": "^4.7.4"
   }
